grid overflow fix

--- a/app/styles/partials/_common.scss
+++ b/app/styles/partials/_common.scss
@@ -57,7 +57,7 @@ body {
 .page-options-bar {}
 
 .content-view {
-  //overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 .user-img {
@@ -84,7 +84,7 @@ body {
 // Common ngGrid Styles
 
 div[gridscrollbar] {
-  //height: calc(100vh - 150px);
+  height: calc(100vh - 150px);
 }
 
 .ngCellText,
